2006-05-11  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* roster.cc: include proper header for srand, rand and prefix
	srand, rand, search with std:: for sunpro

2006-05-11  Graydon Hoare  <graydon@pobox.com>

	* xdelta.cc (read_num): New function.
	(apply_delta): Rewrite to avoid string streams.

2006-05-09  Graydon Hoare  <graydon@pobox.com>

	* xdelta.cc (copied_extent::operator<): Fix ordering bug which 
	caused an unfortunate degradation in inverse delta quality,
	particularly on ChangeLogs.

2006-05-09  Derek Scherger  <derek@echologic.com>

	* packet.cc (consume_file_delta): remove redundant file delta
	verification

2006-05-09  Derek Scherger  <derek@echologic.com>

	* automate.cc (automate_inventory): remove invalid assertion
	* cmd_diff_log.cc (log): check for null revision id rather than
	missing revision id
	* commands.cc: remove unnecessary #include 
	(help): fix indentation
	* netsync.cc: remove stale comment

2006-05-07  Graydon Hoare  <graydon@pobox.com>

	* database.{cc,hh} (pending_writes): New fulltext write buffer,
	gives about 20% performance gain on initial pull.
	(database::have_pending_write): Helper function.
	(database::load_pending_write): Likewise.
	(database::cancel_pending_write): Likewise.
	(database::schedule_write): Likewise.
	(database::exists): Modify to use buffer.
	(database::put_version): Likewise.
	(database::put_file): Likewise.
	(database::put_roster): Likewise.

2006-05-06  Lapo Luchini  <lapo@lapo.it>

	* po/it.po: Translated a few more strings to Italian (162 to go).

2006-05-06  Richard Levitte  <richard@levitte.org>

	* po/sv.po: New string to translate.

2006-05-06  Richard Levitte  <richard@levitte.org>

	* INSTALL: Warn people not to run "make check" as root, since it
	will cause failure of the tests.  I jave no idea if there's any
	such possiblity on Windows, someone else will have to fill that
	in.

2006-05-06  Timothy Brownawell  <tbrownaw@gmail.com>
